fixed typo in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "employee-directory",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cyrusjose.github.io/who-does-what",
+  "homepage": "https://cyrusjose.github.io/Who-does-what/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
